--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bootstrap-icons": "^1.5.0",
         "dataformat": "^1.0.0",
         "dateformat": "^5.0.2",
+        "nanoid": "^3.1.30",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
